--- a/ngStockTracker/src/app/app.component.html
+++ b/ngStockTracker/src/app/app.component.html
@@ -1,3 +1,5 @@
+<app-navigation></app-navigation>
 <main class="container-fluid">
-  <app-home></app-home>
+  <!-- <app-home></app-home> -->
+  <router-outlet></router-outlet>
 </main>
